minor refactor handlers
