# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /clearscript-api-gateway
 definitions:
-  get.Author:
+  handlers.Author:
     properties:
       email:
         type: string
@@ -9,7 +9,24 @@ definitions:
       id:
         type: string
     type: object
-  get.Letter:
+  handlers.ContentGetResponse:
+    properties:
+      author:
+        $ref: '#/definitions/handlers.Author'
+      createdAt:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      letter:
+        $ref: '#/definitions/handlers.Letter'
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  handlers.Letter:
     properties:
       final:
         type: string
@@ -20,7 +37,7 @@ definitions:
       transliteration:
         type: string
     type: object
-  get.Permission:
+  handlers.Permission:
     properties:
       actions:
         items:
@@ -29,24 +46,7 @@ definitions:
       name:
         type: string
     type: object
-  internal_http_handlers_content_get.Response:
-    properties:
-      author:
-        $ref: '#/definitions/get.Author'
-      createdAt:
-        type: string
-      description:
-        type: string
-      id:
-        type: string
-      letter:
-        $ref: '#/definitions/get.Letter'
-      title:
-        type: string
-      updatedAt:
-        type: string
-    type: object
-  internal_http_handlers_user_get.Response:
+  handlers.UserGetResponse:
     properties:
       email:
         type: string
@@ -56,7 +56,7 @@ definitions:
         type: string
       permissions:
         items:
-          $ref: '#/definitions/get.Permission'
+          $ref: '#/definitions/handlers.Permission'
         type: array
     type: object
 info:
@@ -89,7 +89,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_http_handlers_content_get.Response'
+            $ref: '#/definitions/handlers.ContentGetResponse'
         "400":
           description: Bad Request
           schema:
@@ -116,7 +116,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_http_handlers_user_get.Response'
+            $ref: '#/definitions/handlers.UserGetResponse'
         "400":
           description: Bad Request
           schema:
